# DeVAS-filter

./: CHANGES  CMakeLists.txt  ChungLeggeCSF.c  ChungLeggeCSF.h  DEVA-png.c  DEVA-png.h  DEVA-sRGB.c  DEVA-sRGB.h  INSTALLATION  KLT-filter.c  KLT-filter.h  LICENSE  Mac-build-script  README  Windows-build-script  Windows-toolchain.cmake  acuity-conversion.c  acuity-conversion.h  conversions.xlsx  deva-add-text.c  deva-add-text.h  deva-canny.c  deva-canny.h  deva-commandline.c  deva-compare-boundaries.c  deva-filter-commandline.c  deva-filter-version.h  deva-filter.c  deva-filter.h  deva-gblur-fft.c  deva-gblur-fft.h  deva-gblur.c  deva-gblur.h  deva-image.c  deva-image.h  deva-license.h  deva-margin.c  deva-margin.h  deva-presets-old.n  deva-presets.h  (+54 more)
CMake/: FindFFTW.cmake  FindFFTW_Mac.cmake  FindFFTW_Windows.cmake  FindPNG_Mac.cmake  FindPNG_Windows.cmake  FindZLIB_Mac.cmake  FindZLIB_Windows.cmake
Mac-binaries/: README-MacOS  deva-compare-boundaries  deva-filter  deva-visibility  deva-visualize-geometry  devas-add-res-to-ASCII  devas-compare-boundaries  devas-filter  devas-visibility  devas-visualize-geometry  geometry-boundaries  luminance-boundaries  make-coordinates-file
Mac-binaries/man/: deva-filter.1  deva-visibility.1  geometry-boundaries.1  luminance-boundaries.1
Windows-binaries/: README-Windows
doc/: README-geometry-files
doc/man/: devas-filter.1  devas-visibility.1  devas-visualize-geometry.1  make-coordinates-file.1  make-pdf-man-pages
external-libs/fftw-3.3.7/: FFTW3fConfig.cmake  fftw3f.pc
man/: deva-compare-boundaries.1  deva-filter.1  deva-visibility.1  deva-visualize-geometry.1  devas-compare-boundaries.1  devas-filter.1  devas-visibility.1  devas-visualize-geometry.1  geometry-boundaries.1  luminance-boundaries.1  make-coordinates-file.1  make-pdf-man-page  make-pdf-man-pages
radiance/: README.txt  badarg.c  color.c  fputword.c  fvect.c  header.c  image.c  paths.h  ra_skel.c  resolu.c  rtmath.h  spec_rgb.c  words.c
